Add API token and better error handling
I still need to figure out why a catch-all error handler is required. Maybe that's just not included with the swagger+express skeleton project.
